After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726749 - Segmentation fault in libglib-2.0.so.0 with glib-2.39.92
Segmentation fault in libglib-2.0.so.0 with glib-2.39.92
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.11.x
Other Linux
: Normal critical
: ---
Assigned To: gtk-bugs
gtk-bugs
: 726673 726747 726805 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-03-19 22:24 UTC by Armin K.
Modified: 2014-03-21 16:32 UTC
See Also:
GNOME target: 3.12
GNOME version: ---


Attachments
gedit vgdump (34.41 KB, application/x-xz)
2014-03-19 22:43 UTC, Armin K.
  Details
a11y: Remove weak reference when updating a GtkPopoverAccessible relative-to widget (1.06 KB, patch)
2014-03-21 14:32 UTC, Carlos Garnacho
committed Details | Review

Description Armin K. 2014-03-19 22:24:09 UTC
I'm seeing two apps segfault on shutdown and backtrace points me to glib library, magazine_chain_pop_head function.

The apps in question are Totem 3.9.91 and Gedit 3.11.92

Backtraces follow.

Totem:

Program received signal SIGSEGV, Segmentation fault.
0x00007ffff0a4cc05 in magazine_chain_pop_head (magazine_chunks=<synthetic pointer>) at gslice.c:544
544	gslice.c: No such file or directory.
(gdb) bt
  • #0 magazine_chain_pop_head
    at gslice.c line 544
  • #1 magazine_chain_prepare_fields
    at gslice.c line 619
  • #2 magazine_cache_push_magazine
    at gslice.c line 691
  • #3 thread_memory_magazine2_unload
    at gslice.c line 809
  • #4 g_slice_free1
    at gslice.c line 1094
  • #5 g_type_free_instance
    at gtype.c line 1938
  • #6 gtk_widget_real_destroy
    at gtkwidget.c line 11522
  • #7 g_closure_invoke
    at gclosure.c line 768
  • #8 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #9 g_signal_emit_valist
    at gsignal.c line 3307
  • #10 g_signal_emit
    at gsignal.c line 3363
  • #11 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #12 g_object_run_dispose
    at gobject.c line 1073
  • #13 gtk_header_bar_forall
    at gtkheaderbar.c line 1546
  • #14 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #15 g_closure_invoke
    at gclosure.c line 768
  • #16 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #17 g_signal_emit_valist
    at gsignal.c line 3307
  • #18 g_signal_emit
    at gsignal.c line 3363
  • #19 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #20 g_object_run_dispose
    at gobject.c line 1073
  • #21 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #22 g_closure_invoke
    at gclosure.c line 768
  • #23 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #24 g_signal_emit_valist
    at gsignal.c line 3307
  • #25 g_signal_emit
    at gsignal.c line 3363
  • #26 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #27 g_object_run_dispose
    at gobject.c line 1073
  • #28 gtk_overlay_forall
    at gtkoverlay.c line 560
  • #29 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #30 g_closure_invoke
    at gclosure.c line 768
  • #31 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #32 g_signal_emit_valist
    at gsignal.c line 3307
  • #33 g_signal_emit
    at gsignal.c line 3363
  • #34 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #35 g_object_run_dispose
    at gobject.c line 1073
  • #36 gtk_box_forall
    at gtkbox.c line 2541
  • #37 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #38 g_closure_invoke
    at gclosure.c line 768
  • #39 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #40 g_signal_emit_valist
    at gsignal.c line 3307
  • #41 g_signal_emit
    at gsignal.c line 3363
  • #42 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #43 g_object_run_dispose
    at gobject.c line 1073
  • #44 gtk_stack_forall
    at gtkstack.c line 1517
  • #45 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #46 g_closure_invoke
    at gclosure.c line 768
  • #47 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #48 g_signal_emit_valist
    at gsignal.c line 3307
  • #49 g_signal_emit
    at gsignal.c line 3363
  • #50 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #51 g_object_run_dispose
    at gobject.c line 1073
  • #52 gtk_box_forall
    at gtkbox.c line 2541
  • #53 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #54 g_closure_invoke
    at gclosure.c line 768
  • #55 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #56 g_signal_emit_valist
  • #57 g_signal_emit
    at gsignal.c line 3363
  • #58 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #59 g_object_run_dispose
    at gobject.c line 1073
  • #60 gtk_window_forall
    at gtkwindow.c line 8129
  • #61 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #62 g_closure_invoke
    at gclosure.c line 768
  • #63 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #64 g_signal_emit_valist
    at gsignal.c line 3307
  • #65 g_signal_emit
    at gsignal.c line 3363
  • #66 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #67 gtk_window_dispose
    at gtkwindow.c line 2681
  • #68 gtk_application_window_dispose
    at gtkapplicationwindow.c line 762
  • #69 g_object_run_dispose
    at gobject.c line 1073
  • #70 totem_object_exit
    from /usr/lib/libtotem.so.0
  • #71 main_window_destroy_cb
    from /usr/lib/libtotem.so.0
  • #72 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #73 _g_closure_invoke_va
    at gclosure.c line 831
  • #74 g_signal_emit_valist
    at gsignal.c line 3215
  • #75 g_signal_emit
    at gsignal.c line 3363
  • #76 gtk_widget_event_internal
    at gtkwidget.c line 7228
  • #77 gtk_widget_event
    at gtkwidget.c line 6890
  • #78 gtk_main_do_event
    at gtkmain.c line 1617
  • #79 send_delete_event
    at gtkwindow.c line 1307
  • #80 gdk_threads_dispatch
    at gdk.c line 635
  • #81 g_main_dispatch
    at gmain.c line 3064
  • #82 g_main_context_dispatch
    at gmain.c line 3663
  • #83 g_main_context_iterate
    at gmain.c line 3734
  • #84 g_main_context_iteration
    at gmain.c line 3795
  • #85 g_application_run
    at gapplication.c line 2114
  • #86 main
  • #0 magazine_chain_pop_head
    at gslice.c line 544
  • #1 magazine_chain_prepare_fields
    at gslice.c line 619
  • #2 magazine_cache_push_magazine
    at gslice.c line 691
  • #3 thread_memory_magazine2_unload
    at gslice.c line 809
  • #4 g_slice_free1
    at gslice.c line 1094
  • #5 g_type_free_instance
    at gtype.c line 1938
  • #6 gtk_widget_real_destroy
    at gtkwidget.c line 11522
  • #7 g_closure_invoke
    at gclosure.c line 768
  • #8 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #9 g_signal_emit_valist
    at gsignal.c line 3307
  • #10 g_signal_emit
    at gsignal.c line 3363
  • #11 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #12 g_object_run_dispose
    at gobject.c line 1073
  • #13 gtk_box_forall
    at gtkbox.c line 2541
  • #14 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #15 g_closure_invoke
    at gclosure.c line 768
  • #16 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #17 g_signal_emit_valist
    at gsignal.c line 3307
  • #18 g_signal_emit
    at gsignal.c line 3363
  • #19 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #20 g_object_run_dispose
    at gobject.c line 1073
  • #21 gtk_stack_forall
    at gtkstack.c line 1517
  • #22 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #23 g_closure_invoke
    at gclosure.c line 768
  • #24 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #25 g_signal_emit_valist
    at gsignal.c line 3307
  • #26 g_signal_emit
    at gsignal.c line 3363
  • #27 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #28 g_object_run_dispose
    at gobject.c line 1073
  • #29 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #30 g_closure_invoke
    at gclosure.c line 768
  • #31 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #32 g_signal_emit_valist
    at gsignal.c line 3307
  • #33 g_signal_emit
    at gsignal.c line 3363
  • #34 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #35 g_object_run_dispose
    at gobject.c line 1073
  • #36 _unmanage_popover
    at gtkpopover.c line 1461
  • #37 g_hash_table_remove_node
    at ghash.c line 448
  • #38 g_hash_table_remove_internal
    at ghash.c line 1300
  • #39 widget_unmanage_popover
    at gtkpopover.c line 1496
  • #40 gtk_popover_update_relative_to
    at gtkpopover.c line 1596
  • #41 gtk_popover_dispose
    at gtkpopover.c line 212
  • #42 g_object_run_dispose
    at gobject.c line 1073
  • #43 gtk_widget_destroy
    at gtkwidget.c line 4332
  • #44 gtk_menu_button_dispose
    at gtkmenubutton.c line 1024
  • #45 g_object_run_dispose
    at gobject.c line 1073
  • #46 gtk_box_forall
    at gtkbox.c line 2557
  • #47 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #48 g_closure_invoke
    at gclosure.c line 768
  • #49 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #50 g_signal_emit_valist
    at gsignal.c line 3307
  • #51 g_signal_emit
    at gsignal.c line 3363
  • #52 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #53 g_object_run_dispose
    at gobject.c line 1073
  • #54 gtk_box_forall
    at gtkbox.c line 2541
  • #55 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #56 g_closure_invoke
    at gclosure.c line 768
  • #57 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #58 g_signal_emit_valist
    at gsignal.c line 3307
  • #59 g_signal_emit
    at gsignal.c line 3363
  • #60 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #61 g_object_run_dispose
    at gobject.c line 1073
  • #62 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #63 g_closure_invoke
    at gclosure.c line 768
  • #64 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #65 g_signal_emit_valist
    at gsignal.c line 3307
  • #66 g_signal_emit
    at gsignal.c line 3363
  • #67 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #68 g_object_run_dispose
    at gobject.c line 1073
  • #69 gtk_box_forall
    at gtkbox.c line 2541
  • #70 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #71 g_closure_invoke
    at gclosure.c line 768
  • #72 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #73 g_signal_emit_valist
    at gsignal.c line 3307
  • #74 g_signal_emit
    at gsignal.c line 3363
  • #75 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #76 g_object_run_dispose
    at gobject.c line 1073
  • #77 gtk_overlay_forall
    at gtkoverlay.c line 552
  • #78 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #79 g_closure_invoke
    at gclosure.c line 768
  • #80 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #81 g_signal_emit_valist
    at gsignal.c line 3307
  • #82 g_signal_emit
    at gsignal.c line 3363
  • #83 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #84 g_object_run_dispose
    at gobject.c line 1073
  • #85 gtk_window_forall
    at gtkwindow.c line 8129
  • #86 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #87 g_closure_invoke
    at gclosure.c line 768
  • #88 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #89 g_signal_emit_valist
    at gsignal.c line 3307
  • #90 g_signal_emit
    at gsignal.c line 3363
  • #91 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #92 gtk_window_dispose
    at gtkwindow.c line 2681
  • #93 gtk_application_window_dispose
    at gtkapplicationwindow.c line 762
  • #94 ??
  • #95 g_object_run_dispose
    at gobject.c line 1073
  • #96 ??
  • #97 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #98 _g_closure_invoke_va
    at gclosure.c line 831
  • #99 g_signal_emit_valist
    at gsignal.c line 3215
  • #100 g_signal_emit
    at gsignal.c line 3363
  • #101 gtk_widget_event_internal
    at gtkwidget.c line 7228
  • #102 gtk_widget_event
    at gtkwidget.c line 6890
  • #103 gtk_main_do_event
    at gtkmain.c line 1617
  • #104 send_delete_event
    at gtkwindow.c line 1307
  • #105 gdk_threads_dispatch
    at gdk.c line 635
  • #106 g_main_dispatch
    at gmain.c line 3064
  • #107 g_main_context_dispatch
    at gmain.c line 3663
  • #108 g_main_context_iterate
    at gmain.c line 3734
  • #109 g_main_context_iteration
    at gmain.c line 3795
  • #110 g_application_run
    at gapplication.c line 2114
  • #111 main

Comment 1 Armin K. 2014-03-19 22:25:33 UTC
Gedit:

Program received signal SIGSEGV, Segmentation fault.
0x00007ffff48d1c05 in magazine_chain_pop_head (magazine_chunks=<synthetic pointer>) at gslice.c:544
544	gslice.c: No such file or directory.
(gdb) bt
  • #0 magazine_chain_pop_head
    at gslice.c line 544
  • #1 magazine_chain_prepare_fields
    at gslice.c line 619
  • #2 magazine_cache_push_magazine
    at gslice.c line 691
  • #3 thread_memory_magazine2_unload
    at gslice.c line 809
  • #4 g_slice_free1
    at gslice.c line 1094
  • #5 g_type_free_instance
    at gtype.c line 1938
  • #6 gtk_widget_real_destroy
    at gtkwidget.c line 11522
  • #7 g_closure_invoke
    at gclosure.c line 768
  • #8 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #9 g_signal_emit_valist
    at gsignal.c line 3307
  • #10 g_signal_emit
    at gsignal.c line 3363
  • #11 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #12 g_object_run_dispose
    at gobject.c line 1073
  • #13 gtk_box_forall
    at gtkbox.c line 2541
  • #14 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #15 g_closure_invoke
    at gclosure.c line 768
  • #16 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #17 g_signal_emit_valist
    at gsignal.c line 3307
  • #18 g_signal_emit
    at gsignal.c line 3363
  • #19 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #20 g_object_run_dispose
    at gobject.c line 1073
  • #21 gtk_stack_forall
    at gtkstack.c line 1517
  • #22 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #23 g_closure_invoke
    at gclosure.c line 768
  • #24 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #25 g_signal_emit_valist
    at gsignal.c line 3307
  • #26 g_signal_emit
    at gsignal.c line 3363
  • #27 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #28 g_object_run_dispose
    at gobject.c line 1073
  • #29 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #30 g_closure_invoke
    at gclosure.c line 768
  • #31 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #32 g_signal_emit_valist
    at gsignal.c line 3307
  • #33 g_signal_emit
    at gsignal.c line 3363
  • #34 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #35 g_object_run_dispose
    at gobject.c line 1073
  • #36 _unmanage_popover
    at gtkpopover.c line 1461
  • #37 g_hash_table_remove_node
    at ghash.c line 448
  • #38 g_hash_table_remove_internal
    at ghash.c line 1300
  • #39 widget_unmanage_popover
    at gtkpopover.c line 1496
  • #40 gtk_popover_update_relative_to
    at gtkpopover.c line 1596
  • #41 gtk_popover_dispose
    at gtkpopover.c line 212
  • #42 g_object_run_dispose
    at gobject.c line 1073
  • #43 gtk_widget_destroy
    at gtkwidget.c line 4332
  • #44 gtk_menu_button_dispose
    at gtkmenubutton.c line 1024
  • #45 g_object_run_dispose
    at gobject.c line 1073
  • #46 gtk_box_forall
    at gtkbox.c line 2557
  • #47 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #48 g_closure_invoke
    at gclosure.c line 768
  • #49 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #50 g_signal_emit_valist
    at gsignal.c line 3307
  • #51 g_signal_emit
    at gsignal.c line 3363
  • #52 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #53 g_object_run_dispose
    at gobject.c line 1073
  • #54 gtk_box_forall
    at gtkbox.c line 2541
  • #55 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #56 g_closure_invoke
    at gclosure.c line 768
  • #57 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #58 g_signal_emit_valist
    at gsignal.c line 3307
  • #59 g_signal_emit
    at gsignal.c line 3363
  • #60 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #61 g_object_run_dispose
    at gobject.c line 1073
  • #62 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #63 g_closure_invoke
    at gclosure.c line 768
  • #64 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #65 g_signal_emit_valist
    at gsignal.c line 3307
  • #66 g_signal_emit
    at gsignal.c line 3363
  • #67 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #68 g_object_run_dispose
    at gobject.c line 1073
  • #69 gtk_box_forall
    at gtkbox.c line 2541
  • #70 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #71 g_closure_invoke
    at gclosure.c line 768
  • #72 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #73 g_signal_emit_valist
    at gsignal.c line 3307
  • #74 g_signal_emit
    at gsignal.c line 3363
  • #75 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #76 g_object_run_dispose
    at gobject.c line 1073
  • #77 gtk_overlay_forall
    at gtkoverlay.c line 552
  • #78 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #79 g_closure_invoke
    at gclosure.c line 768
  • #80 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #81 g_signal_emit_valist
    at gsignal.c line 3307
  • #82 g_signal_emit
    at gsignal.c line 3363
  • #83 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #84 g_object_run_dispose
    at gobject.c line 1073
  • #85 gtk_window_forall
    at gtkwindow.c line 8129
  • #86 gtk_container_destroy
    at gtkcontainer.c line 1410
  • #87 g_closure_invoke
    at gclosure.c line 768
  • #88 signal_emit_unlocked_R
    at gsignal.c line 3667
  • #89 g_signal_emit_valist
    at gsignal.c line 3307
  • #90 g_signal_emit
    at gsignal.c line 3363
  • #91 gtk_widget_dispose
    at gtkwidget.c line 11354
  • #92 gtk_window_dispose
    at gtkwindow.c line 2681
  • #93 gtk_application_window_dispose
    at gtkapplicationwindow.c line 762
  • #94 ??
  • #95 g_object_run_dispose
    at gobject.c line 1073
  • #96 ??
  • #97 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #98 _g_closure_invoke_va
    at gclosure.c line 831
  • #99 g_signal_emit_valist
    at gsignal.c line 3215
  • #100 g_signal_emit
    at gsignal.c line 3363
  • #101 gtk_widget_event_internal
    at gtkwidget.c line 7228
  • #102 gtk_widget_event
    at gtkwidget.c line 6890
  • #103 gtk_main_do_event
    at gtkmain.c line 1617
  • #104 send_delete_event
    at gtkwindow.c line 1307
  • #105 gdk_threads_dispatch
    at gdk.c line 635
  • #106 g_main_dispatch
    at gmain.c line 3064
  • #107 g_main_context_dispatch
    at gmain.c line 3663
  • #108 g_main_context_iterate
    at gmain.c line 3734
  • #109 g_main_context_iteration
    at gmain.c line 3795
  • #110 g_application_run
    at gapplication.c line 2114
  • #111 main

Comment 2 Armin K. 2014-03-19 22:43:58 UTC
Created attachment 272444 [details]
gedit vgdump

valgrind --tool=memcheck --leak-check=full --leak-resolution=high --num-callers=20 --log-file=vgdump gedit
Comment 3 Sébastien Wilmet 2014-03-19 23:17:38 UTC
Both backtraces have some functions from GtkPopover. So it maybe comes from GTK+ or a misuse of GtkPopover.
Comment 4 Matthias Clasen 2014-03-20 19:05:57 UTC
what version of GTK+ was this with ?
Comment 5 Oliver Gerlich 2014-03-20 19:46:47 UTC
Bug 726747 might be related to this crash.
Comment 6 Armin K. 2014-03-20 22:39:13 UTC
glib-2.0 - 2.39.92
atk - 2.11.92
cairo - 1.12.16
pango - 1.36.3
gtk+-3.0 - 3.11.9
gtksourceview-3.0 - 3.11.91
gedit - 3.11.92
totem - 3.11.91
Comment 7 Michael Catanzaro 2014-03-21 00:05:56 UTC
*** Bug 726673 has been marked as a duplicate of this bug. ***
Comment 8 Carlos Garnacho 2014-03-21 14:32:27 UTC
Created attachment 272567 [details] [review]
a11y: Remove weak reference when updating a GtkPopoverAccessible relative-to widget

Otherwise the weak reference is left dangling, which later causes issues at the time
of destroying that widget.
Comment 9 Emmanuele Bassi (:ebassi) 2014-03-21 14:34:53 UTC
Review of attachment 272567 [details] [review]:

looks good to me.
Comment 10 Matthias Clasen 2014-03-21 15:53:25 UTC
*** Bug 726805 has been marked as a duplicate of this bug. ***
Comment 11 Matthias Clasen 2014-03-21 15:53:54 UTC
*** Bug 726747 has been marked as a duplicate of this bug. ***
Comment 12 Carlos Garnacho 2014-03-21 16:32:23 UTC
A hard code freeze break was approved for this one. Pushed to master.

Attachment 272567 [details] pushed as 0e7884f - a11y: Remove weak reference when updating a GtkPopoverAccessible relative-to widget