a11y: Remove weak reference when updating a GtkPopoverAccessible relative-to widget

Otherwise the weak reference is left dangling, which later causes issues at the time
of destroying that widget.

https://bugzilla.gnome.org/show_bug.cgi?id=726749